--- a/classes/bard.org
+++ b/classes/bard.org
@@ -8,18 +8,18 @@
 #+summary:  Bard class summary
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
 #+BEGIN_CENTER
-[ [[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]] ] [ [[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]] ]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
 -----
 Support the rest of the party using your talents, or your "talents". Uses unique class abilities and spells
 
-To begin playing a Bard, first choose a subclass: [[[id:6a8efa65-451d-4eac-a069-84661a0c69ab][Actor]], [[id:067059f6-be3d-4994-86ca-d7d33a291a79][Muse]], [[id:05331b42-b242-4866-a6e6-df9cdad306e7][Craftsman]], or [[id:d204c3f7-766c-465b-a958-ec7e8283ad0b][Shaman]]]. These subclasses give you special traits that increase in power as you get stronger, and a few distinct advantages right out the gate. Your character also gains 1 talisman (consult with DM to learn what you get). Be sure you apply your level 1 bonuses from your subclass.
+To begin playing a Bard, first choose a subclass: [[[id:6a8efa65-451d-4eac-a069-84661a0c69ab][Actor]], [[id:067059f6-be3d-4994-86ca-d7d33a291a79][Muse]], [[id:05331b42-b242-4866-a6e6-df9cdad306e7][Craftsman]]]. These subclasses give you special traits that increase in power as you get stronger, and a few distinct advantages right out the gate. Your character also gains 1 talisman (consult with DM to learn what you get). Be sure you apply your level 1 bonuses from your subclass.
 
 _Spell attack bonus_: PROF + INT
 _Initial Health_: Roll 1d6 and add it to your base HP
 * Level-up
 1. Gain Life Force Manipulation. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary.
-2. Subclass Feature. Gain 1d6 health.
+2. Gain a subclass ability. Gain 1d6 health.
 3. Your Intelligence and Wisdom scores both increase by 1.
 4. Gain Health Transfer. Twice per combat, you may transfer up to 10 health from yourself to an ally. Gain 2d6 health.
 5. Your Charisma is increased by +1. Gain 1d6 health.
@@ -27,7 +27,7 @@ _Initial Health_: Roll 1d6 and add it to your base HP
 7. Gain Transmutation. Learn about one of the following damage types of your choosing (Ice, Fire, Radiance, Energy, Force, Psychic). Once per round of combat, during an ally’s turn, you can change their damage dealt into damage of this type and add an additional 1d6 of this damage type. Gain 1d6 health.
 8. Your Strength and Constitution scores both increase by 1.
 9. Gain Bard Buff. Once per combat, grant one of your allies one of the bard buffs for the rest of combat (see subclasses for a list).
-10. Subclass Feature. Gain 1d6 health.
+10. Gain a subclass ability. Gain 1d6 health.
 11. Life Force Manipulation’s strength increases to 2d8.
 12. Health Transfer’s strength increases to 20 health. Gain 1d6 health.
 13. Learn Upgraded Transmutation - gain one more damage type, and when applying transmutation, the damage increases to 2d6.
