--- a/classes/sorcerer.org
+++ b/classes/sorcerer.org
@@ -2,18 +2,18 @@
 :ID:       f2323133-e17d-4cff-86db-415b72e6d42e
 :END:
 #+title:    Sorcerer
+#+filetags: :DND:sorcerer:
 #+author:   zfoteff
 #+date:     [2023-07-15 Sat]
 #+summary:  Sorcerer class description
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
-
 #+BEGIN_CENTER
-[[[id:DND][Main Menu]]] [[[id:17a96883-cc40-409c-9fb5-80d5ab0c8379][Player Introduction Sheet]]] [[[id:campaign-classes][Classes]]]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
 -----
 Manipulate the world around you in a manner of your choosing with latent powers imbued in the user. Uses spells primarily, cast using Wisdom.
 
-To begin playing as a Sorcerer, first choose a sorcery: [[[id:e2504611-7581-49a2-9006-68a65de4319c][Order]], [[id:ef16f314-677b-47af-957b-a1a29fe225de][Chaos]], [[id:569f7d4d-5744-49e4-ac0d-bebbd1795992][Psychic]]]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the spell index, generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system.
+To begin playing as a Sorcerer, first choose a sorcery: [[[id:e2504611-7581-49a2-9006-68a65de4319c][Order]], [[id:ef16f314-677b-47af-957b-a1a29fe225de][Chaos]], [[id:569f7d4d-5744-49e4-ac0d-bebbd1795992][Psychic]]]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the [[id:49c66431-d9c7-4213-ae29-b62365fd32d4][spell index]], generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system.
 
 Spells are cast using
 
@@ -21,6 +21,10 @@ Spells are cast using
 - _Spell Save DC_: 8 + WIS + PROF
 - Gain +1 Crafting
 
+* Proficiencies
+| Armor | Weapons | Tools |
+|-------+---------+-------|
+|       |         |       |
 * Level-up guide
 1. Pick one generic spell, one sorcerer spell, and one sorcery (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
 2. Add one generic spell and one sorcerer spell to your spell list. Roll 1d6 and add to your health.
