--- a/classes/subclasses/actor.org
+++ b/classes/subclasses/actor.org
@@ -2,13 +2,13 @@
 :ID:       6a8efa65-451d-4eac-a069-84661a0c69ab
 :END:
 #+title:    Actor
+#+filetags: :DND:bard:
 #+author:   zfoteff
 #+date:     [2023-07-12 Wed]
 #+summary:  Actor subclass description and information
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
-
 #+BEGIN_CENTER
-[[[id:DND][Main Menu]]] [[[id:campaign-classes][Character Selection]]] [[[id:campaign-classes][Classes]]] [[[id:8bb9a08a-97c0-4231-a002-ad7dcf83e4d8][Bard]]]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:8bb9a08a-97c0-4231-a002-ad7dcf83e4d8][Bard]]]
 #+END_CENTER
 -----
 * Level 1
