--- a/classes/subclasses/radiant_wizard.org
+++ b/classes/subclasses/radiant_wizard.org
@@ -2,6 +2,7 @@
 :ID:       8153acaf-ac20-4b00-8ac0-fa423c4ff5ce
 :END:
 #+title:    Radiant Wizard
+#+filetags: :DND:WIZARD:
 #+author:   zfoteff
 #+date:     [2023-07-12 Wed]
 #+summary:  Radiant Wizard subclass description
