--- a/classes/subclasses/thief.org
+++ b/classes/subclasses/thief.org
@@ -8,10 +8,10 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
 
 #+BEGIN_CENTER
-[[[id:DND][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:0b7f7671-c4de-41e9-b199-4a9ceb6352d2][Rogue]]]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:0b7f7671-c4de-41e9-b199-4a9ceb6352d2][Rogue]]]
 #+END_CENTER
 -----
-A skilled thief who have trained for years to become masters the art of thieving
+A skilled thief who have trained for years to master the art of thieving and pinching.
 
 * Level 1
 * Level 2
