--- a/classes/subclasses/holy-knight.org
+++ b/classes/subclasses/holy-knight.org
@@ -1,1 +1,22 @@
-#+title: Holy Knight
+:PROPERTIES:
+:ID:       60eb64e5-82ae-42d0-9b3f-e0a662fda360
+:END:
+#+title:    Holy Knight
+#+filetags: :DND:paladin:
+#+author:   zfoteff
+#+date:     [2023-08-13 Sun]
+#+summary:  Holy Knight subclass for the Paladin class.
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
+#+BEGIN_CENTER
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:940552be-47cf-48ff-8ca0-8c2b7f629052][Paladin]]]
+#+END_CENTER
+-----
+Fight for your faith, pleasing your God and the faithful.
+* Level 1
+- Gain _Lay Hands_: Your blessed touch can heal wounds. You have a pool of healing power that replenishes when you take a long rest. With that pool, you can restore a total number of hit points equal to your paladin level x 5. Alternatively, you can expend 5 hit points from your pool of healing to cure the target of one disease or neutralize one poison affecting it.
+* Level 2
+
+* Level 5
+* Level 10
+* Level 15
+* Level 19
