--- a/classes/subclasses/void-priest.org
+++ b/classes/subclasses/void-priest.org
@@ -11,7 +11,7 @@
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:940552be-47cf-48ff-8ca0-8c2b7f629052][Paladin]]]
 #+END_CENTER
 -----
-Embrace the call of the void and ignore the . Return the world to the state of entropy it longs to be in.
+Embrace the call of the void and ignore the . Return the world to the state of entropy it so longs to be in.
 * Level 1
 - Gain Darkvision to 120ft and the ability to see through magically-created darkness.
 * Level 2
