--- a/classes/prophet.org
+++ b/classes/prophet.org
@@ -7,7 +7,7 @@
 #+date:     [2023-07-25 Tue]
 #+summary:  Prophet class description
 #+BEGIN_CENTER
-[ [[org:dnd/dnd.org][Main Menu]] ] [ [[org:dnd/classes/classes.org][Classes]] ]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
 -----
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
