--- a/classes/bard.org
+++ b/classes/bard.org
@@ -20,7 +20,7 @@ _Initial Health_: Roll 1d6 and add it to your base HP
 * Level-up
 1. Gain Life Force Manipulation. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary.
 2. Gain a subclass ability. Gain 1d6 health.
-3. Your Intelligence and Wisdom scores both increase by 1.
+3. Your Intelligence and Wisdom scores both increase by 1. Gain a subclass ability.
 4. Gain Health Transfer. Twice per combat, you may transfer up to 10 health from yourself to an ally. Gain 2d6 health.
 5. Your Charisma is increased by +1. Gain 1d6 health.
 6. Life Force Manipulation’s strength increases to 1d10.
@@ -29,7 +29,7 @@ _Initial Health_: Roll 1d6 and add it to your base HP
 9. Gain Bard Buff. Once per combat, grant one of your allies one of the bard buffs for the rest of combat (see subclasses for a list).
 10. Gain a subclass ability. Gain 1d6 health.
 11. Life Force Manipulation’s strength increases to 2d8.
-12. Health Transfer’s strength increases to 20 health. Gain 1d6 health.
+12. Health Transfer’s strength increases to 20 health. Gain 1d6 health. Gain a subclass ability.
 13. Learn Upgraded Transmutation - gain one more damage type, and when applying transmutation, the damage increases to 2d6.
 14. Gain +1 of Any. Gain 1d6 health.
 15. Subclass Feature.
