--- a/classes/subclasses/chaos_sorcerer.org
+++ b/classes/subclasses/chaos_sorcerer.org
@@ -7,7 +7,6 @@
 #+date:     [2023-07-17 Mon]
 #+summary:  Order sorcery subclass
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
-
 #+BEGIN_CENTER
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:f2323133-e17d-4cff-86db-415b72e6d42e][Sorcerer]]]
 #+END_CENTER
@@ -34,4 +33,4 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
   - Revive an ally
   - The death of any enemy that you reasonably could have defeated in combat
   - The prevention of a minor/medium mistake you made
-- Variety!: On hit, deal 12d8 damage - 1d8 of each of the twelve types of damage
+- _Variety!_: On hit, deal 10d8 damage - 1d8 of each of the twelve types of damage
