--- a/classes/subclasses/holy-knight.org
+++ b/classes/subclasses/holy-knight.org
@@ -12,8 +12,11 @@
 #+END_CENTER
 -----
 Fight for your faith, pleasing your God and the faithful.
+
+* Holy Knight Traits
+- _/Lawful Struggle/_: Any damage you deal to Chaotic enemies is increased by 50%.
 * Level 1
-- Gain _Lay Hands_: Your blessed touch can heal wounds. You have a pool of healing power that replenishes when you take a long rest. With that pool, you can restore a total number of hit points equal to your paladin level x 5. Alternatively, you can expend 5 hit points from your pool of healing to cure the target of one disease or neutralize one poison affecting it.
+- Gain _*Lay Hands*_: Your blessed touch can heal wounds. You have a pool of healing power that replenishes when you take a long rest. With that pool, you can restore a total number of hit points equal to your paladin level x 5. Alternatively, you can expend 5 hit points from your pool of healing to cure the target of one disease or neutralize one poison affecting it.
 * Level 2
 
 * Level 5
