--- a/races.org
+++ b/races.org
@@ -16,7 +16,7 @@
 |-----------+---------+------------+---------------+---------|
 | Human     |       6 | +1 to any  | -1 to any     |         |
 | Elf       |       6 |            |               |         |
-| Orc       |       8 |            |               |         |
+| Orc       |       8 | +2 to STR  |               |         |
 | Demon     |       5 |            |               |         |
 | Hobbit    |       5 |            |               |         |
 | Dwarf     |       7 |            |               |         |
